web_server/html/main.css
/* ... */
.input-container input:placeholder-shown {
	border-bottom: 2px solid #e0e0e0 !important;
}
.input-container input:placeholder-shown:focus, .input-container input::-moz-placeholder:focus {
	border-bottom: 2px solid #2196F3 !important;
}
.input-container label {
	font-size: 14px;
	position: absolute;
	top: 0;
	right: 0;
	left: 0;
	display: flex;
	box-sizing: border-box;
	cursor: text;
	color: #757575;
	align-items: center;
}
.animation .input-container label {
	transition: .2s ease-in-out;
}
.input-container input, .input-container label {
	font-size: 14px;
	width: 100%;
	height: 34px;
	margin-top: 15px;
}
.input-container input:valid {
	border-bottom: 2px solid #e0e0e0;
}
.input-container input:focus {
	border-bottom: 2px solid #2196f3 !important;
}
.input-container input:invalid {
	border-bottom: 2px solid #f44336;
}
.input-container input:valid + label {
	font-size: .8rem;
	transform: translate(0,-25px);
	pointer-events: none;
	color: #969696 !important;
}
.input-container input:focus + label {
	font-size: .8rem;
	transform: translate(0,-25px);
	pointer-events: none;
	color: #2196F3 !important;
}
.input-container input:invalid:not(:placeholder-shown) + label {
	font-size: .8rem;
	transform: translate(0,-25px);
	pointer-events: none;
	color: #f44336;
}
#settings .checkbox, #card-wrapper .checkbox {
	float: right;
}
input[type='checkbox'] {
	display: none;
}
input[type='checkbox']:checked + label {
	border-color: #106CC8;
	background: #106CC8;
}
input[type='checkbox']:checked + label:after {
	transform: scale(1.3);
}
label.checkbox {
	position: relative;
	display: inline-block;
	box-sizing: border-box;
	width: 18px;
	height: 18px;
	cursor: pointer;
	transition: .2s;
	border: 2px solid #6d6d6d;
	border-radius: 10%;
	background: none;
	z-index: 1;
}
label.checkbox:before {
	position: absolute;
	z-index: 0;
	top: 0;
	left: 0;
	transform: translate(-27%, -27%);
	display: block;
	width: 200%;
	height: 200%;
	content: '';
	transition: .3s ease;
	border-radius: 50%;
}
label.checkbox:after {
	display: block;
	width: 100%;
	height: 100%;
	content: '';
	transition: .1s ease;
	transform: scale(0);
	background: url(data:image/svg+xml;base64,PHN2ZyBmaWxsPSIjRkZGRkZGIiBoZWlnaHQ9IjI0IiB2aWV3Qm94PSIwIDAgMjQgMjQiIHdpZHRoPSIyNCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KICAgIDxwYXRoIGQ9Ik0wIDBoMjR2MjRIMHoiIGZpbGw9Im5vbmUiLz4KICAgIDxwYXRoIGQ9Ik05IDE2LjE3TDQuODMgMTJsLTEuNDIgMS40MUw5IDE5IDIxIDdsLTEuNDEtMS40MXoiLz4KPC9zdmc+) center center no-repeat;
	background-size: contain;
}
label.checkbox:active:before,
.checkboxContainer:active label.checkbox:before {
	background: rgba(0, 0, 0, 0.15);
	transform: translate(-34%, -34%);
	width: 300%;
	height: 300%;
   
}
.row.inputCheckbox .checkbox {
	float: left;
	margin-right: 10px;
}
.row.inputCheckbox label:not(.checkbox), #settings label:not(.checkbox), #card-wrapper label:not(.checkbox) {
	line-height: 18px;
}

/*********************************** Footer ***********************************/
footer {
	height: 120px;
	margin-top: 30px;
	background: #2b2b31;
}
footer ul {
	margin: 0 0 32px;
	padding: 0;
	list-style: none;
}
footer li {
	font-size: 14px;
	font-weight: 400;
	line-height: 20px;
	float: left;
	margin-right: 16px;
	margin-bottom: 0;
	letter-spacing: 0;
}
footer a {
	white-space: nowrap;
	color: #9e9e9e;
}
.footer, .sub-section-attribution {
	font-weight: 500;
	display: block;
	height: 32px;
	padding: 16px 40px;
}
.sub-section-attribution {
	font-size: 14px;
	width: calc(100% - 80px);
	height: 20px;
	padding: 18px 40px;
	background: rgba(0, 0, 0, .15);
}

/************************ Notifications & reboot button ***********************/
#notification {
	font-size: 16px;
	font-weight: 300;
	line-height: 35px;
	position: fixed;
	z-index: 1;
	bottom: 0;
	transform: translate(0, 70px);
	padding: 10px 25px;
	transition: transform .3s ease, opacity .5s ease;
	opacity: 0;
	color: #fff;
	background-color: #2b2b31;
}
.show #notification {
	transform: translate(0);
	opacity: 1;
}
@media (min-width:33.75em) {
	.container {
		width: 85%;
	}
}
.reboot {
	position: relative;
	display: inline-block;
	width: 40px;
	height: 40px;
	padding: 10px;
	cursor: pointer;
	transition: background .3s ease;
	pointer-events: initial;
	background: rgb(16,108,200);
	fill: rgba(255,255,255,0.9);
}
.reboot-inner {
	transition: box-shadow .3s ease, background .3s ease;
	border-radius: 1000px;
}
.button, button, input[type='submit'] {
	box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
}
.shadow, .reboot-inner, #notification,.card-small {
	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
}
.reboot-container {
	position: fixed !important;
	z-index: 1;
	right: 20px;
	bottom: 10px;
	overflow: visible !important;
	transition: bottom .3s ease;
	pointer-events: none;
}
.tooltip {
	position: absolute;
	z-index: 1;
	top: 10px;
	right: 120%;
	width: 80px;
	padding: 5px 0;
	transition: opacity .5s ease;
	text-align: center;
	opacity: 0;
	color: #fff;
	border-radius: 2px;
	background-color: #323232;
}
.reboot-container:hover .tooltip {
	opacity: 1;
}

/**************************** Spinner & indicators ****************************/
#spinner-container {
	position: fixed;
	z-index: 99;
	left: calc(50% - 25px);
	width: 30px;
	height: 30px;
	margin-top: -100px;
	padding: 10px;
	transition: all .5s ease;
	opacity: 0;
	border-radius: 100vw;
	background: #fff;
	box-shadow: 0 3px 8px 0 rgba(0, 0, 0, .19), 0 6px 13px 0 rgba(0, 0, 0, .24);
}
.spinner {
	display: none;
	transition: ease .3s opacity;
	-webkit-animation: rotator 1.4s linear infinite;
	animation: rotator 1.4s linear infinite;
}
.show-loading {
	margin-top: 155px !important;
	opacity: 1 !important;
}
.show-loading .spinner {
	display: block;
}
#minimal .show-loading {
	margin-top: 15px !important;
}
@-webkit-keyframes rotator {
	0% {
		-webkit-transform: rotate(0deg);
		transform: rotate(0deg);
	}
	100% {
		-webkit-transform: rotate(270deg);
		transform: rotate(270deg);
	}
}
/* ... */

